Fixed the click bug on iOS.

--- a/app/styles/modules/_about.sass
+++ b/app/styles/modules/_about.sass
@@ -9,7 +9,6 @@
 
   .overlay &
     box-shadow: 0 0 50px $color-black
-    cursor: pointer
     .breakpoint-lg &
       right: 75%
     .breakpoint-md &
